﻿Sigil v0.2.0 RC1 ADD_DATE
    - hitting the keyboard shortcut for the Find&Replace window while the window is open
    now switches focus to that window (issue #362)
    - fixed an issue with the applied headings not "sticking" and not showing up in the TOC
    editor (issue #300)
    - the special iPad- and Calibre-friendly cover meta tag information is now preserved
    after loading
    - added a new "Cover Image" entry for image resource in the "Add Semantics" Book Browser menu  
    - if an image is not set as a cover image manually, Sigil now uses heuristics on save
    to determine if the epub has a cover image
    - if an epub has an image set as a cover image, Sigil will now write a special meta tag
    that identifies this image in the OPF; this tag is then used by the iPad (and Calibre)
    for the book cover, for instance
    - all OPF <guide> element information when loading epubs is now preserved
    - added a new "Add Semantics" menu for XHTML documents; it can be used to mark XHTMLs as
    "Dedication", "Colophon", "Glossary" etc. for the <guide> element of the OPF
    - the status bar now shows a message after chapter split operations
    - fixed an issue with filenames with characters that should not appear in valid XML IDs
    having those characters added anyway (issue #344)
    - fixed an issue with files with uppercase extensions not having a mimetype set in the OPF
    (issue #349)
    - fixed an issue with Sigil rewriting headings when the TOC was opened and no heading was 
    edited (issue #327)
    - fixed an issue where adding an existing HTML file through the Book Browser would clear
    the current metadata in the book (issue #329)
    - added a check that prevents Sigil from loading the same resource multiple times in 
    invalid epubs (issue #339) 
    - fixed a bug that made the direct XHTML references in the NCX file less likely (issue #333)